--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +12,14 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "inversify": "^6.0.2",
+    "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^9.0.1"
   },
-  "description": ""
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "typescript": "^5.4.5"
+  }
 }
