--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ejs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodedemon dist/app.js localhost 8080"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +13,15 @@
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "mongoose": "^8.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
+    "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
   }
 }
