--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "lib": ["es6", "dom"],
     "types": ["reflect-metadata"],
     "module": "commonjs",
